alignment in card item solved

--- a/Client/src/Components/styles/CommonStyles.css
+++ b/Client/src/Components/styles/CommonStyles.css
@@ -449,6 +449,9 @@ hr {
 }
 
 /* card item */
+.text-right{
+    text-align: right;
+}
 .b_card-item{
     margin: auto;
     box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
